--- a/app/src/main/res/layout/activity_main_list_kiemkho.xml
+++ b/app/src/main/res/layout/activity_main_list_kiemkho.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.windows10gamer.connsql.Main_List_Kiemkho">
+    tools:context="com.example.windows10gamer.connsql.Kiem_Kho.Main_List_Kiemkho">
 
     <TextView
         android:layout_width="match_parent"
