--- a/app/src/main/res/layout/activity_main_sales.xml
+++ b/app/src/main/res/layout/activity_main_sales.xml
@@ -150,7 +150,7 @@
                     <Button
                         android:id="@+id/btn_scan_now"
                         android:layout_width="65dp"
-                        android:layout_height="37dp"
+                        android:layout_height="31dp"
                         android:layout_below="@+id/tv_blog_url"
                         android:layout_centerHorizontal="true"
                         android:layout_margin="0dp"
@@ -296,32 +296,24 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="4"
                     android:gravity="center_vertical"
                     android:text="Khuyến mãi:"
                     android:textColor="@color/cam" />
 
-                <RadioGroup
-                    android:id="@+id/rgKhuyenmai"
+                <CheckBox
+                    android:id="@+id/rbGiamgia"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="7"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="Giảm giá" />
 
-                    <RadioButton
-                        android:id="@+id/rbGiamgia"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Giảm giá" />
-
-                    <RadioButton
-                        android:id="@+id/rbTangqua"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Quà tặng" />
-                </RadioGroup>
+                <CheckBox
+                    android:id="@+id/rbTangqua"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="Quà tặng" />
 
             </LinearLayout>
 
@@ -375,15 +367,13 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lngiamgia"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:paddingTop="5dp"
                 android:weightSum="10">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3" />
 
                 <EditText
                     android:id="@+id/edGiamgia"
@@ -395,9 +385,114 @@
                     android:layout_weight="7"
                     android:drawableEnd="@drawable/ic_attach_money_black_24dp"
                     android:ems="10"
-                    android:hint="Nhập vào số tiền"
-                    android:inputType="number"
+                    android:hint="Nhập mã giảm giá..."
+                    android:inputType="textCapCharacters"
                     android:textColor="@color/RED" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3">
+
+                    <Button
+                        android:id="@+id/btnkiemtraMGG"
+                        android:layout_width="76dp"
+                        android:layout_height="31dp"
+                        android:layout_below="@+id/tv_blog_url"
+                        android:layout_centerHorizontal="true"
+                        android:layout_margin="0dp"
+                        android:background="@android:color/holo_orange_light"
+                        android:drawableLeft="@drawable/ic_search_black_24dp"
+                        android:gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="Kiểm tra"
+                        android:textColor="#fff"
+                        android:textSize="8sp" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ln1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:weightSum="10">
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Giá trị mã giảm giá:"
+                        android:textColor="@color/cam" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5">
+
+                    <TextView
+                        android:id="@+id/tvgiatriMagiam"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0 đ"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/RED" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ln2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:weightSum="10">
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Số tiền phải thu:"
+                        android:textColor="@color/cam" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5">
+
+                    <TextView
+                        android:id="@+id/tvphaithu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0 đ"
+                        android:textAlignment="textEnd"
+                        android:textColor="#fa0a0a"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
 
             </LinearLayout>
 
@@ -408,9 +503,25 @@
                 android:layout_weight="1"
                 android:background="@color/cam" />
 
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <Switch
+                    android:id="@+id/switchChangeNV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Sử dụng chế độ bán dùm:" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -418,19 +529,25 @@
                 android:weightSum="10">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center_horizontal">
 
                     <ImageView
+                        android:id="@+id/ivDoinv"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         app:srcCompat="@drawable/icon_user" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:id="@+id/lnNVDefault"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="8"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -466,6 +583,24 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lnNVChange"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="8"
+                    android:background="@drawable/bg124"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <Spinner
+                        android:id="@+id/spChange"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"></Spinner>
+
+                </LinearLayout>
+
             </LinearLayout>
 
 
