--- a/app/src/main/res/layout/adapter_order.xml
+++ b/app/src/main/res/layout/adapter_order.xml
@@ -5,13 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="horizontal">
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:weightSum="10">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="10dp">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:background="@android:drawable/btn_star_big_on"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="8"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,18 +43,22 @@
                 android:id="@+id/tvTimeOrder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="12"
                 android:gravity="center_vertical"
                 android:text="03:00"
-                android:textSize="12sp" />
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvDateOrder"
+                android:id="@+id/tvSoluong"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical"
-                android:text="20/10/2017" />
+                android:layout_weight="8"
+                android:text="TextView"
+                android:textAlignment="textEnd"
+                android:textColor="@color/RED" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -43,48 +66,40 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:paddingBottom="5dp"
             android:weightSum="20">
 
             <TextView
                 android:id="@+id/tvMaOrder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
+                android:layout_weight="15"
                 android:gravity="center_vertical"
                 android:text="32980382"
-                android:textSize="12sp" />
+                android:textSize="14sp"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/tvTennvOrder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="Trần thị thanh thùy" />
+                android:layout_weight="5"
+                android:text="thanh thùy"
+                android:textAlignment="viewEnd" />
         </LinearLayout>
 
-        <LinearLayout
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="20">
-
-            <TextView
-                android:id="@+id/tvTenkhOrder"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical"
-                android:text="Trần văn A" />
-
-            <TextView
-                android:id="@+id/tvSdtkhOrder"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical"
-                android:text="01675322273" />
-        </LinearLayout>
-
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_bh" />
     </LinearLayout>
 
 </LinearLayout>
